# textual-universal-directorytree

./: .gitignore  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  404.html  LICENSE  LICENSE.txt  README.md  Taskfile.yaml  index.html  mkdocs.yaml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: lint.yaml  publish.yaml  release.yaml  test.yaml  tests.yaml
contributing/: index.html
docs/: contributing.md  gen_pages.py  index.md
requirements/: requirements-all.py3.10.txt  requirements-all.py3.11.txt  requirements-all.py3.12.txt  requirements-all.py3.13.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  requirements-prod.txt  requirements-test.txt
search/: search_index.json
tests/: conftest.py  helpers.py  test_screenshots.py  test_utils.py
tests/cassettes/: test_github_screenshot.yaml
textual_universal_directorytree/: __about__.py  __init__.py  __main__.py  _version.py  alternate_paths.py  app.py  tools.py  universal_directory_tree.py  utils.py
