[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "textual>=3.0.0",
  "universal-pathlib>=0.2.6"
]
description = "A Textual Directory Tree for all File Systems"
keywords = ["textual", "tui", "plugin", "fsspec"]
license = "MIT"
name = "textual-universal-directorytree"
readme = "README.md"
requires-python = ">=3.9,<4"
version = "1.7.0"

[project.optional-dependencies]
remote = [
  "s3fs",
  "requests>=2",
  "gcsfs",
  "adlfs",
  "aiohttp",
  "paramiko"
]

[project.urls]
Documentation = "https://github.com/juftin/textual-universal-directorytree#readme"
Issues = "https://github.com/juftin/textual-universal-directorytree/issues"
Source = "https://github.com/juftin/textual-universal-directorytree"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "mypy>=1.6.1",
  "ruff~=0.1.7"
]
docs = [
  "markdown-callouts",
  "markdown-exec",
  "mkdocs",
  "mkdocs-autorefs",
  "mkdocs-click",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocs-section-index",
  "mkdocstrings",
  "mkdocstrings-python"
]

[tool.pytest.ini_options]
addopts = [
  "-v",
  "--cov=textual_universal_directorytree",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--junitxml=pytest.xml"
]

[tool.coverage.paths]
tests = ["tests", "*/textual-universal-directorytree/tests"]
textual_universal_directorytree = ["textual_universal_directorytree", "*/textual-universal-directorytree/textual_universal_directorytree"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]
show_missing = true

[tool.coverage.run]
branch = true
omit = [
  "textual_universal_directorytree/__about__.py"
]
parallel = true
source_pkgs = ["textual_universal_directorytree", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
ignore = [
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Boolean-typed positional argument in function definition
  "FBT001",
  # Boolean default positional argument in function definition
  "FBT002",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Exception must not use a string literal, assign to variable first
  "EM101"
]
line-length = 88
select = [
  "A",  # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "C",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (Error)
  "EM",  # flake8-errmsg
  "F",  # Pyflakes
  "FBT",  # flake8-boolean-trap
  "I",  # isort
  "ICN",  # flake8-import-conventions
  "N",  # pep8-naming
  "PLC",  # Pylint (Convention message)
  "PLE",  # Pylint (Error message)
  "PLR",  # Pylint (Refactor message)
  "PLW",  # Pylint (Warning message)
  "Q",  # flake8-quotes
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "T",  # flake8-debugger (T10) and flake8-print (T20)
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle (Warning)
  "YTT"  # flake8-2020
]
target-version = "py38"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
known-first-party = ["textual_universal_directorytree"]

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.pydocstyle]
convention = "numpy"
